[package]
name = "contacts"
version = "0.1.0"
authors = ["Robin van Leeuwen <robinvanleeuwen@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version="1.0.39", features=["derive"]}
diesel = { version = "1.4.2", features = ["postgres"] }
jsonrpc-core = "10.1.0"
jsonrpc-http-server = "10.1.0"
dotenv = "0.9.0"
notifica = "1.0.0"