[package]
name = "contactbook-api"
version = "0.2.1"
authors = ["Robin van Leeuwen <robinvanleeuwen@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
serde = { version="1.0.39", features=["derive"]}
diesel = { version = "1.4.2", features = ["postgres"] }
jsonrpc-core = "10.1.0"
jsonrpc-http-server = "10.1.0"
dotenv = "0.9.0"

[package.metadata.deb]
section = "utility"
priority = "optional"
maintainer = "Robin van Leeuwen <robinvanleeuwen@gmail.com>"
